# padpo

./: .gitignore  .travis.yml  LICENSE  README.md  deliver.sh  padpo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
padpo/: __init__.py  __main__.py  github.py  padpo.py  pofile.py
padpo/checkers/: __init__.py  baseclass.py  doublespace.py  empty.py  fuzzy.py  glossary.py  grammalecte.py  linelength.py  nbsp.py
tests/: test_po_warnings.py  test_po_without_warnings.py
tests/po_with_warnings/: tuple.po
tests/po_without_warnings/: abc.po  entree_utilisateur.po  guillemets.po  imperatif.po  internal_links.po  links.po  nbsp.po  pep.po  silent_glossary.po  silent_grammalecte.po  silent_nbsp.po  tuple.po
