[tool.poetry]
name = "padpo"
version = "0.9.0"
description = "Linter for gettext files"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
    # TODO: Add more
]
authors = ["Vincent Poulailleau <vpoulailleau@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vpoulailleau/padpo"
homepage = "https://github.com/vpoulailleau/padpo"
documentation = "https://github.com/vpoulailleau/padpo"
keywords = ["gettext", "linter", "grammalecte"]
license = "BSD-3-Clause"
include = ["padpo/**/*.py"]

[tool.poetry.dependencies]
python = "^3.7"
pygrammalecte = "^1.1.0"
requests = "^2.20.0"
simplelogging = ">=0.10,<0.12"

[tool.poetry.dev-dependencies]
python-dev-tools = {version = ">=2020.9.4", python = ">=3.7,<4.0"}

[tool.poetry.scripts]
padpo = "padpo.padpo:main"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37, py38

[testenv]
whitelist_externals =
    poetry
    echo
    sed
    cp
changedir = {toxinidir}/tests
commands =
    poetry install -v
    poetry run pytest -s -vv --cov=padpo
    poetry run coverage xml
    echo 'fix travis bug'
    sed --in-place -e 's#//home#/home#g' coverage.xml
    echo 'fix codeclimate bug, use relative path'
    sed --in-place -e 's#/home.*vpoulailleau/padpo/##g' coverage.xml
    cp coverage.xml ../coverage.xml
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
