[project]
name = "padpo"
version = "0.12.0"
description = "Linter for gettext files"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    # TODO: Add more
]
requires-python = ">=3.9"
authors = [{ name = "Vincent Poulailleau", email = "vpoulailleau@gmail.com" }]
keywords = ["gettext", "linter", "grammalecte"]
license = "BSD-3-Clause"
dependencies = [
    "pygrammalecte>=1.4",
    "requests>=2.20.0",
    "simplelogging >=0.10,<0.12",
]

[project.urls]
repository = "https://github.com/AFPy/padpo"
homepage = "https://github.com/AFPy/padpo"
documentation = "https://github.com/AFPy/padpo"

[project.scripts]
padpo = "padpo.padpo:main"

[tool.hatch.build.targets.sdist]
packages = ["padpo"]

[tool.hatch.build.targets.wheel]
packages = ["padpo"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310, py311, py312, py313

[testenv]
deps =
    pytest>=8
    pytest-cov >= 6
allowlist_externals =
    echo
    sed
    cp
changedir = {toxinidir}/tests
commands =
    python -m pytest -s -vv --cov=padpo
    coverage xml
    echo 'fix travis bug'
    sed --in-place -e 's@//home@/home@' coverage.xml
    echo 'fix codeclimate bug, use relative path'
    sed --in-place -e 's@/home.*vpoulailleau/padpo/@@g' coverage.xml
    cp coverage.xml ../coverage.xml
"""

[tool.uv]
dev-dependencies = ["ruff>=0.7.2", "pytest>=8", "pytest-cov >= 6", "tox >= 4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
